# internal/project_evidence/model_ambulance.go
@@ -1,0 +1,25 @@
+/*
+ * Patient Evidence Api
+ *
+ * Patient Evidence and Prescription management for Web-In-Cloud system
+ *
+ * API version: 1.0.0
+ * Contact: your_email@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package project_evidence
+
+type Ambulance struct {
+
+	// Unique identifier of the ambulance
+	Id string `json:"id"`
+
+	// Human readable display name of the ambulance
+	Name string `json:"name"`
+
+	RoomNumber string `json:"roomNumber"`
+
+	// List of patients registered in this ambulance
+	Patients []EvidedPatient `json:"patients,omitempty"`
+}
